# safehide-api

./: Cargo.toml  README.md
src/: main.rs
src/handles/: user_handler.rs
src/models/: user.rs
src/types/: email.rs
