[package]
name = "safehide-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
futures-util = "0.3.31"
dotenv = "0.15.0"
uuid = { version = "1.20.0", features = ["serde"] }
regex = "1.12.2"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
firebase-auth-sdk = "0.1.0"